--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "backend",
+  "name": "two-tier-backend",
   "version": "1.0.0",
+  "description": "Backend for two-tier application",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
